Prevent scrolling inside the cropper window

--- a/app/src/css/cropper.css
+++ b/app/src/css/cropper.css
@@ -1,6 +1,7 @@
 html, body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 svg {
